[tool.poetry]
name = "audio"
version = "0.1.0"
description = ""
authors = ["Antoine Gallix <antoine@antoine-gallix.me>"]

[tool.poetry.dependencies]
python = "^3.10"
pydub = "^0.25.1"
click = "^8.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
